--- a/app/views/partials/_backlog.html.erb
+++ b/app/views/partials/_backlog.html.erb
@@ -1,6 +1,6 @@
 <div class="mx-1 mb-2 panel" id="backlog" data-panel="backlog">
   <div class="card h-full body-bg">
-    <div  class="card-header d-flex flex-row justify-content-between align-items-center">
+    <div  class="card-header d-flex flex-row justify-content-between align-items-center flex-wrap gap-2">
       <h2>Backlog</h2>
       <div class="d-flex flex-row justify-content-between align-items-center">
         <div class="accordion text-dark" id="accordionExample">
