--- a/app/views/partials/_detail.html.erb
+++ b/app/views/partials/_detail.html.erb
@@ -32,7 +32,7 @@
       <div class="flash-task-container<%= item.id %>"></div>
       <div>
         <label for="task_name">Task Name</label>
-        <input type="text" name="task_name" class="form-control pointer" id="task_name<%= item.id %>">
+        <input type="text" name="task_name" required="true" class="form-control pointer" id="task_name<%= item.id %>">
         <p  class="text-danger"><%= error_messages(@task, :name) %></p>
         <button type="button" class="message-btn mx-0 my-3" id="addTaskButton<%= item.id %>">Add Task</button>
       </div>
@@ -48,7 +48,7 @@
           <% end %>
         </div>
         <%= form_tag(update_user_ids_project_detail_path(item.project_id, item.id ), method: :post, remote: true) do %>
-          <input type="text"  name="username[]" id="search-input<%= item.id %>" class="form-control" placeholder="Type username to search..." />
+          <input type="text"  name="username[]" id="search-input<%= item.id %>" required="true" class="form-control" placeholder="Type username to search..." />
           <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
           <div id="search-results<%= item.id %>"></div>
           <%= submit_tag 'Add User', class: 'message-btn mt-3' %>
@@ -83,8 +83,8 @@
                 <div class="icon-container mt-2 mx-2">
                   <%= User.find(chat.sender_id).username[0].upcase %>
                 </div>
-                <div class='message py-2'>
-                  <%= chat.message.gsub(/@(\w+)/, '<span class="fw-bold">@\1</span>').html_safe %>
+                <div class='message py-2 fw-bold'>
+                  <%= link_mentions(chat.message).html_safe %>
                 </div>
               </div>
             <% end %>
@@ -95,7 +95,7 @@
           <div class="form-group d-flex flex-row">
             <%= form.label :message, class: "mt-3 mx-2 d-none" %>
             <div class="position-relative">
-              <%= form.text_area :message, id: "chat_message_#{item.id}", class: "form-control my-2", autocomplete: "off" %>
+              <%= form.text_area :message, id: "chat_message_#{item.id}", class: "form-control my-2", autocomplete: "off", required: true %>
               <div id="search-results-chat<%= item.id %>" class="search-results"
             ></div>
             </div>
