--- a/app/views/partials/_icebox.html.erb
+++ b/app/views/partials/_icebox.html.erb
@@ -1,7 +1,7 @@
 <div class="mx-1 mb-2 panel" id="icebox" data-panel="icebox">
   <div class="card h-full body-bg">
-    <div  class="card-header d-flex flex-row justify-content-between align-items-center">
-      <h2>Icebox</h2>
+    <div  class="card-header d-flex flex-row justify-content-between align-items-center flex-wrap gap-2">
+      <h2 class="mx-2">Icebox</h2>
       <div class="d-flex flex-row justify-content-between align-items-center">
         <div class="accordion text-dark" id="accordionExample2">
           <div>
