--- a/app/views/projects/adduser.html.erb
+++ b/app/views/projects/adduser.html.erb
@@ -1,30 +1,33 @@
 <%= javascript_pack_tag 'project' %>
-<div class="d-flex justify-content-between align-items-center flex-wrap p-1 text-white px-lg-2 projectNav">
-  <div class="text-center heading"><i class="fa fa-sharp fa-light fa-gears mx-2"></i> ProjectTracker </div>
-  <div><i class="fa fa-solid fa-user mx-2"></i> <%= current_user.username %>
-    <%= link_to logout_path, method: :post do %>
-      <i class="fa fa-solid fa-right-from-bracket mx-3 text-white"></i>
-    <% end %>
-  </div>
-</div>
+<%= render 'partials/outernav' %>
 <nav class="d-flex justify-content-around align-items-center bg-white flex-wrap p-3">
   <div class="text-center sub-heading">Project <span id='project-id'></span> </div>
 </nav>
-<div class="container mt-5">
+<div id="flash-container" class="my-2"></div>
+<%= link_to 'Go Back', :back, class: 'btn mybtn-success m-3' %>
+<div class="container">
   <h5> Add User to Project </h5>
-  <%= form_tag(update_user_ids_projects_path, method: :post) do %>
+  <%= form_tag(update_user_ids_projects_path, method: :post, id: "add-user-project", remote: true) do %>
     <%= hidden_field_tag :project_id, nil, id: 'project-id-field' %>
     <select name="user_id[]" id="multiple" multiple class="search-select">
-      <% @users.each do |user| %>
-        <option value="<%= user.id %>"><%= user.email %></option>
+      <% if @users %>
+        <% @users.each do |user| %>
+          <option value="<%= user.id %>"><%= user.email %></option>
+        <% end %>
       <% end %>
     </select>
     <div class="d-flex justify-content-center m-5">
-      <%= submit_tag 'Add User to Project', class: 'btn mybtn-success' %>
+      <%= button_tag 'Add User to Project', type: 'submit', class: 'btn mybtn-success', 'data-turbolinks': 'false' %>
     </div>
   <% end %>
   <h5 class="fw-bold"> Users present In this Project </h5>
-  <% @project_users.each do |user| %>
-    <div class="py-2"> <strong><span>Email:</span></strong> <%= user.email%> <strong><span>Username:</span></strong> <%= user.username %></div>
-  <% end %>
+  <div class="user-container">
+    <% if @project_users %>
+      <% @project_users.each do |user| %>
+        <%= link_to user_path(user.username) do %>
+        <div class="py-2 text-dark"> <strong><span>Email:</span></strong> <%= user.email%> <strong><span>Username:</span></strong> <%= user.username %></div>
+        <% end %>
+      <% end %>
+    <% end %>
+  </div>
 </div>
