--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <%= render 'partials/outernav' %>
 <%= link_to 'Go Back', :back, class: 'btn mybtn-success m-3' %>
-<h3 class="fw-bold my-5 text-center">User Profile</h3>
-<div class="container card py-4 d-flex flex-row justify-content-around align-items-center flex-wrap">
+<h3 class="fw-bold text-center">User Profile</h3>
+<div class="container card my-5 py-2 d-flex flex-row justify-content-around align-items-center flex-wrap">
   <div class="profile-container">
     <%= @user.username[0].upcase %>
   </div>
