--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -23,7 +23,7 @@
 </nav>
 <%= render 'partials/flash' %>
 <div class="container">
-  <h3 class="text-center my-4">All Projects</h3>
+  <h3 class="text-center my-4">Your Projects</h3>
   <div class="row mb-3" id="projects-display">
     <% if @projects.length > 0 %>
       <% @projects.ordered_by_id_desc.each do |project| %>
