--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <%= render 'partials/outernav' %>
 <%= render 'partials/flash' %>
-<button class="btn mybtn-success m-3" onclick="window.history.back();">Go Back</button>
+<%= render 'partials/backbutton' %>
 <h3 class="fw-bold text-center">Edit Profile</h3>
 <div class="container card my-5 d-flex flex-row justify-content-around align-items-center flex-wrap">
   <div class="profile-container">
