--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <%= render 'partials/outernav' %>
-<button class="btn mybtn-success m-3" onclick="window.history.back();">Go Back</button>
+<%= render 'partials/backbutton' %>
 <h3 class="fw-bold text-center">User Profile</h3>
 <div class="container card my-5 py-2 d-flex flex-row justify-content-around align-items-center flex-wrap">
   <div class="profile-container">
